style: fixed z-index for components and snowfall effect

--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,14 @@
 body {
   margin: 0;
 }
+
+.no-scrollbar {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
